--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
         <link type="text/css" href="css/bootstrap.min.css" rel="stylesheet">
         <link type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
         <link type="text/css" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/slate/bootstrap.min.css" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Sarpanch:400,600|Sirin+Stencil' rel='stylesheet' type='text/css'>
         <link type="text/css" href="css/main.css" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <script src="js/jquery.scrollTo.min.js"></script>
+        <script src="js/jquery.localScroll.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
+        <script src="js/main.js"></script>
     </head>
-    <body>
-        <nav class="navbar navbar-default">
+    <body >
+        <nav class="navbar navbar-default navbar-fixed-top">
           <div class="container-fluid">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -19,20 +23,21 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Nick Brennan</a>
+              <a class="navbar-brand" href="#">NB</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">About</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
+                <li><a href="#">Contact</a></li> 
+                <li><div id="menuspacer"></div></li>  
+              </ul>       
             </div>
           </div>
         </nav>
         <div class="container">
-            <div id="pagetop">
+            <div id="pagetop">              
                 <div class="row">
                     <div class="col-lg-12">
                         <img src="assets/portrait1.jpg">
@@ -41,7 +46,7 @@
                 <div class="row">
                     <div class="col-lg-3"></div>
                     <div class="col-lg-6">
-                        <h1 class="nameBanner">Nick Brennan</h1>
+                        <h1 class="nameBanner" id="name">Nick Brennan</h1>
                     </div> 
                 </div>
                  <div class="row">
@@ -50,8 +55,14 @@
                         <h3 class="nameBanner">Full Stack Web Developer</h3>
                     </div> 
                 </div>
+            </div>           
+        </div>
+        <div id="about">
+            <a name='about'></a>
+            <div class="row">
+                <div class="col-lg-5"></div>
+                <div class="col-lg-2" id="aboutBanner">About Me</div>
             </div>
-                 
         </div>
     </body>
 </html>
