--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <div id="about">
             <a name='about'></a>
             <div class="row">
-                <div class="col-lg-5"></div>
-                <div class="col-lg-2" id="aboutBanner">About Me</div>
+                <div class="col-lg-4"></div>
+                <div class="col-lg-4" id="aboutBanner"><h2 id="aboutTitle"><b>A Little Bit About Me:</b></h2></div>
             </div>
         </div>
     </body>
