--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link type="text/css" href="css/bootstrap.min.css" rel="stylesheet"/>
-        <link type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
-        <link type="text/css" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/slate/bootstrap.min.css" rel="stylesheet"/>
-        <link href='https://fonts.googleapis.com/css?family=Sarpanch:400,600|Sirin+Stencil' rel='stylesheet' type='text/css'/>
+        <link type="text/css" href="css/bootstrap.min.css" rel="stylesheet">
+        <link type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+        <link type="text/css" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/slate/bootstrap.min.css" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Sarpanch:400,600|Sirin+Stencil' rel='stylesheet' type='text/css'>
         <link type="text/css" href="css/main.css" rel="stylesheet">
-        <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
+        <link rel='shortcut icon' href='siteicon.ico' type='image/x-icon' >
         <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script src="js/jquery.scrollTo.min.js"></script>
         <script src="js/jquery.localScroll.min.js"></script>
