finished first draft

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#">Contact</a></li> 
+                <li><a href="#contact">Contact</a></li> 
                 <li><div id="menuspacer"></div></li>  
               </ul>       
             </div>
@@ -56,6 +56,12 @@
                         <h3 class="nameBanner">Full Stack Web Developer</h3>
                     </div> 
                 </div>
+                <div class="row">
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-6 navcaret">
+                        <h3><center><a href="#about"><i class="fa fa-caret-down fa-5x"></i></a></center></h3>
+                    </div> 
+                </div>
             </div>           
         </div>
         <div id="about">
@@ -63,6 +69,18 @@
             <div class="row">
                 <div class="col-lg-4"></div>
                 <div class="col-lg-4" id="aboutBanner"><h2 id="aboutTitle"><b>A Little Bit About Me:</b></h2></div>
+            </div>
+             <div class="row">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6" id="aboutText"><center><p>I'm a WebDev / Coder with a background in audio engineering and Italian translation. While looking for ways to expand my reach as an audio engineer, I began programming in order to create a game sound portfolio. I caught the coding bug and spent the next year self educating in C# and .NET technologies, along with basic HTML, CSS and Javascript. I joined General Assembly in order to deepen my web based knowledge and experience, and to codify my strategies as I pivot from music and translations to a full-time position as a web developer. 
+
+Skills: languages - Javascript, Ruby, C#, HTML, CSS, EJS, ERB, Italian.  Frameworks - Node, Ruby on Rails, Express, Angular, APS.NET MVC.  Technologies: jQuery, Bootstrap, Git/Github, Bcrypt, Underscore.js, Rspec, AJAX, Socket.io, Jasmine, Mongoose, 3rd Party APIs.  Databases: MongoDB, PostreSQL, MS SQL Server.</p></center></div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6 navcaret">
+                    <h3><center><a href="#projects"><i class="fa fa-caret-down fa-3x"></i></a></center></h3>
+                </div> 
             </div>
         </div>
         <div class="container" id="projects" name="projects">
@@ -80,6 +98,21 @@
                 <div class="col-lg-3"><h3 class="projectTitle">Vagabond</h3><p>Vagabond is a social travel blogging site built using Ruby on Rails. Maps are handled using the Google Maps API, and keywords are extracted from the users posts through the text analysis feature of IBM's Alchemy API.</p></div>
                 <div class="col-lg-3"><h3 class="projectTitle">MoodZiq</h3><p>This playlist builder and audio player allows the user to pick a duration and fill that time with the musical genre or mood of their choice. Playlists can be saved and recalled through a clean and intuitive interface. MoodZiq was built using Ruby on Rails and JQuery, and draws its tunes from the SoundCloud API.</p></div>
                 <div class="col-lg-3"><h3 class="projectTitle">ÖVA</h3><p>ÖVA is a run coaching application. An athlete enters their planned weekly training mileage and the days of the week they plan to run, and ÖVA generates a plan based on previous efforts which are gathered through tight integration with Strava.</p></div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6 navcaret">
+                    <h3><center><a href="#contact"><i class="fa fa-caret-down fa-3x"></i></a></center></h3>
+                </div> 
+            </div>
+        </div>
+        <div id="contact" name="contact">
+            <div class="container">
+                <div class="row" id="contactIcons">
+                    <div class="col-lg-4"><a href="mailto:nick_p_b@yahoo.com"><i class="fa fa-envelope fa-5x"></i></a></div>
+                    <div class="col-lg-4"><a href="https://github.com/Nick-Brennan" target="_blank"><i class="fa fa-github fa-5x"></i></a></div>
+                    <div class="col-lg-4"><a href="https://www.linkedin.com/in/brennannick" target="_blank"><i class="fa fa-linkedin fa-5x"></i></a></div>
+                </div>
             </div>
         </div>
     </body>
