edited about text

--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
             </div>
              <div class="row">
                 <div class="col-lg-3"></div>
-                <div class="col-lg-6" id="aboutText"><center><p>I'm a WebDev / Coder with a background in audio engineering and Italian translation. While looking for ways to expand my reach as an audio engineer, I began programming in order to create a game sound portfolio. I caught the coding bug and spent the next year self educating in C# and .NET technologies, along with basic HTML, CSS and Javascript. I joined General Assembly in order to deepen my web based knowledge and experience, and to codify my strategies as I pivot from music and translations to a full-time position as a web developer. 
-
-Skills: languages - Javascript, Ruby, C#, HTML, CSS, EJS, ERB, Italian.  Frameworks - Node, Ruby on Rails, Express, Angular, APS.NET MVC.  Technologies: jQuery, Bootstrap, Git/Github, Bcrypt, Underscore.js, Rspec, AJAX, Socket.io, Jasmine, Mongoose, 3rd Party APIs.  Databases: MongoDB, PostreSQL, MS SQL Server.</p></center></div>
+                <div class="col-lg-6" id="aboutText"><center><h4>I'm driven to find creative solutions to interesting problems, and when I found programming I knew it was for me. My background in music, audio technology, and translations, combined with a passion for puzzles and a lifetime of computer tinkering make me uniquely suited to the task. I'm always hungry for a challenge.</h4><p>While looking for ways to expand my reach as an audio engineer, I began to code in order to create a game sound portfolio. I caught the coding bug and spent the next year self educating in C# and .NET technologies, along with basic HTML, CSS and Javascript. I joined General Assembly in order to deepen my knowledge and experience, and to codify my strategies as I pivot from music and translations to a full-time position as a web developer.</p></center></div>
             </div>
             <div class="row">
                 <div class="col-lg-3"></div>
