--- a/index.html
+++ b/index.html
@@ -86,16 +86,16 @@
                 <div class="col-lg-12"><h2 id="projectsTitle"><b>Projects</b></h2></div>
             </div>
             <div class="row">
-                <div class="col-lg-3"><a href="http://twitter-lounge.herokuapp.com"><img src="assets/tlounge.png" class="screenshot"></a></div>
-                <div class="col-lg-3"><a href="http://vagabond-ga.herokuapp.com"><img src="assets/vagabond.png" class="screenshot"></a></div>
-                <div class="col-lg-3"><a href="http://moodziq-player.herokuapp.com"><img src="assets/moodziq.png" class="screenshot"></a></div>
-                <div class="col-lg-3"><a href="http://ovarun.herokuapp.com"><img src="assets/ova.png" class="screenshot"></a></div>
+                <div class="col-lg-3"><a href="http://twitter-lounge.herokuapp.com" target="_blank"><img src="assets/tlounge.png" class="screenshot"></a></div>
+                <div class="col-lg-3"><a href="http://vagabond-ga.herokuapp.com" target="_blank"><img src="assets/vagabond.png" class="screenshot"></a></div>
+                <div class="col-lg-3"><a href="http://moodziq-player.herokuapp.com" target="_blank"><img src="assets/moodziq.png" class="screenshot"></a></div>
+                <div class="col-lg-3"><a href="http://ovarun.herokuapp.com" target="_blank"><img src="assets/ova.png" class="screenshot"></a></div>
             </div>
             <div class="row">
-                <div class="col-lg-3"><h3 class="projectTitle">Twitter-Lounge</h3><p>Twitter-Lounge is a real time social Twitter experience. The Socket.io powered chat client is accompanied by a configurable live Twitter stream. This project was built using the Node.js/Express/MongoDB stack, with a lightweight jQuery front-end.</p></div>
-                <div class="col-lg-3"><h3 class="projectTitle">Vagabond</h3><p>Vagabond is a social travel blogging site built using Ruby on Rails. Maps are handled using the Google Maps API, and keywords are extracted from the users posts through the text analysis feature of IBM's Alchemy API.</p></div>
-                <div class="col-lg-3"><h3 class="projectTitle">MoodZiq</h3><p>This playlist builder and audio player allows the user to pick a duration and fill that time with the musical genre or mood of their choice. Playlists can be saved and recalled through a clean and intuitive interface. MoodZiq was built using Ruby on Rails and JQuery, and draws its tunes from the SoundCloud API.</p></div>
-                <div class="col-lg-3"><h3 class="projectTitle">ÖVA</h3><p>ÖVA is a run coaching application. An athlete enters their planned weekly training mileage and the days of the week they plan to run, and ÖVA generates a plan based on previous efforts which are gathered through tight integration with Strava. This project was build using an Angular.js front-end and a Rails back-end.</p></div>
+                <div class="col-lg-3"><h3 class="projectTitle">Twitter-Lounge</h3><p>Twitter-Lounge is a real time social Twitter experience. The Socket.io powered chat client is accompanied by a configurable live Twitter stream. This project was built using the Node.js/Express/MongoDB stack, with a lightweight jQuery front-end.</p><small>login: guest@guest.com / password: 123</small></div>
+                <div class="col-lg-3"><h3 class="projectTitle">Vagabond</h3><p>Vagabond is a social travel blogging site built using Ruby on Rails. Maps are handled using the Google Maps API, and keywords are extracted from the users posts through the text analysis feature of IBM's Alchemy API.</p><small>login: guest@guest.com / password: 123</small></div>
+                <div class="col-lg-3"><h3 class="projectTitle">MoodZiq</h3><p>This playlist builder and audio player allows the user to pick a duration and fill that time with the musical genre or mood of their choice. Playlists can be saved and recalled through a clean and intuitive interface. MoodZiq was built using Ruby on Rails and JQuery, and draws its tunes from the SoundCloud API.</p><small>login: guest@guest.com / password: 123</small></div>
+                <div class="col-lg-3"><h3 class="projectTitle">ÖVA</h3><p>ÖVA is a run coaching application. An athlete enters their planned weekly training mileage and the days of the week they plan to run, and ÖVA generates a plan based on previous efforts which are gathered through tight integration with Strava. This project was build using an Angular.js front-end and a Rails back-end.</p><small>Demo mode for guests without Strava accounts coming soon</small></div>
             </div>
             <div class="row">
                 <div class="col-lg-3"></div>
