further positioning tweaks

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="row">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-6 navcaret">
-                    <h3><center><a href="#contact"><i class="fa fa-caret-down fa-3x"></i></a></center></h3>
+                    <h3><center><a href="#contact"><i class="fa fa-caret-down fa-3x" id="projectCaret"></i></a></center></h3>
                 </div> 
             </div>
         </div>
