trying to fix section height

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                 <div class="col-lg-12"><h2 id="projectsTitle"><b>Projects</b></h2></div>
             </div>
             <div class="row">
-                <div class="col-lg-3"><a href="http://twitter-lounge.herokuapp.com" target="_blank"><img src="assets/tlounge.png" class="screenshot"></a></div>
-                <div class="col-lg-3"><a href="http://vagabond-ga.herokuapp.com" target="_blank"><img src="assets/vagabond.png" class="screenshot"></a></div>
-                <div class="col-lg-3"><a href="http://moodziq-player.herokuapp.com" target="_blank"><img src="assets/moodziq.png" class="screenshot"></a></div>
-                <div class="col-lg-3"><a href="http://ovarun.herokuapp.com" target="_blank"><img src="assets/ova.png" class="screenshot"></a></div>
+                <div class="col-xs-3"><a href="http://twitter-lounge.herokuapp.com" target="_blank"><img src="assets/tlounge.png" class="screenshot"></a></div>
+                <div class="col-xs-3"><a href="http://vagabond-ga.herokuapp.com" target="_blank"><img src="assets/vagabond.png" class="screenshot"></a></div>
+                <div class="col-xs-3"><a href="http://moodziq-player.herokuapp.com" target="_blank"><img src="assets/moodziq.png" class="screenshot"></a></div>
+                <div class="col-xs-3"><a href="http://ovarun.herokuapp.com" target="_blank"><img src="assets/ova.png" class="screenshot"></a></div>
             </div>
             <div class="row">
                 <div class="col-lg-3"><h3 class="projectTitle">Twitter-Lounge</h3><p>Twitter-Lounge is a real time social Twitter experience. The Socket.io powered chat client is accompanied by a configurable live Twitter stream. This project was built using the Node.js/Express/MongoDB stack, with a lightweight jQuery front-end.</p><small>login: guest@guest.com / password: 123</small></div>
