changed spacing of name and added wobble on hover to carets

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link href='https://fonts.googleapis.com/css?family=Sarpanch:400,600|Sirin+Stencil' rel='stylesheet' type='text/css'>
         <link type="text/css" href="css/main.css" rel="stylesheet">
         <link rel='shortcut icon' href='siteicon.ico' type='image/x-icon' >
+        <link rel="stylesheet" type="text/css" href="css/hover.css">
         <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script src="js/jquery.scrollTo.min.js"></script>
         <script src="js/jquery.localScroll.min.js"></script>
@@ -45,9 +46,9 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-6">
-                        <h1 class="nameBanner" id="name">Nick Brennan</h1>
+                    <div class="col-lg-2"></div>
+                    <div class="col-lg-8">
+                        <h1 class="nameBanner" id="name">NICK BRENNAN</h1>
                     </div> 
                 </div>
                  <div class="row">
@@ -59,7 +60,7 @@
                 <div class="row">
                     <div class="col-lg-3"></div>
                     <div class="col-lg-6 navcaret">
-                        <h3><center><a href="#about"><i class="fa fa-caret-down fa-5x"></i></a></center></h3>
+                        <h3><center><a href="#about"><i class="fa fa-caret-down fa-5x hvr-wobble-vertical"></i></a></center></h3>
                     </div> 
                 </div>
             </div>           
@@ -77,7 +78,7 @@
             <div class="row">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-6 navcaret">
-                    <h3><center><a href="#projects"><i class="fa fa-caret-down fa-3x"></i></a></center></h3>
+                    <h3><center><a href="#projects"><i class="fa fa-caret-down fa-3x hvr-wobble-vertical"></i></a></center></h3>
                 </div> 
             </div>
         </div>
@@ -100,7 +101,7 @@
             <div class="row">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-6 navcaret">
-                    <h3><center><a href="#contact"><i class="fa fa-caret-down fa-3x" id="projectCaret" style="margin-top:0px;vertical-align:top;"></i></a></center></h3>
+                    <h3><center><a href="#contact"><i class="fa fa-caret-down fa-3x hvr-wobble-vertical" id="projectCaret" style="margin-top:0px;vertical-align:top;"></i></a></center></h3>
                 </div> 
             </div>
         </div>
