--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         <div id="contact" name="contact">
             <div class="container">
                 <div class="row" id="contactIcons">
-                    <div class="col-lg-4"><a href="mailto:nick_p_b@yahoo.com"><i class="fa fa-envelope fa-5x"></i></a></div>
-                    <div class="col-lg-4"><a href="https://github.com/Nick-Brennan" target="_blank"><i class="fa fa-github fa-5x"></i></a></div>
-                    <div class="col-lg-4"><a href="https://www.linkedin.com/in/brennannick" target="_blank"><i class="fa fa-linkedin fa-5x"></i></a></div>
+                    <div class="col-lg-4"><a href="mailto:nick_p_b@yahoo.com"><i class="fa fa-envelope fa-5x hvr-pulse-grow"></i></a></div>
+                    <div class="col-lg-4"><a href="https://github.com/Nick-Brennan" target="_blank"><i class="fa fa-github fa-5x hvr-pulse-grow"></i></a></div>
+                    <div class="col-lg-4"><a href="https://www.linkedin.com/in/brennannick" target="_blank"><i class="fa fa-linkedin fa-5x hvr-pulse-grow"></i></a></div>
                 </div>
             </div>
         </div>
