added animation to top bg

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
           </div>
         </nav>
-        <div class="container">
+        <div class="container" id="animLayer">
             <div id="pagetop">              
                 <div class="row">
                     <div class="col-lg-12" id="profileContainer">
