added link to view site code

--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
                     <div class="col-lg-4"><a href="https://github.com/Nick-Brennan" target="_blank"><i class="fa fa-github fa-5x hvr-pulse-grow"></i></a></div>
                     <div class="col-lg-4"><a href="https://www.linkedin.com/in/brennannick" target="_blank"><i class="fa fa-linkedin fa-5x hvr-pulse-grow"></i></a></div>
                 </div>
+                <div class="row" id="underIcons">
+                <p id="thisSite" class="pull-right"><small><a href="https://github.com/Nick-Brennan/Nick-Brennan.github.io" target="_blank">check out the code for this site</a></small></p>
+                </div>
             </div>
         </div>
     </body>
