--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="col-xs-2"><a href="http://vagabond-ga.herokuapp.com" target="_blank"><img src="assets/vagabond.png" class="screenshot hvr-rotate"></a></div>
                 <div class="col-xs-2"><a href="http://moodziq-player.herokuapp.com" target="_blank"><img src="assets/moodziq.png" class="screenshot hvr-rotate"></a></div>
                 <div class="col-xs-2"><a href="http://ovarun.herokuapp.com" target="_blank"><img src="assets/ova.png" class="screenshot hvr-rotate"></a></div>
-                <div class="col-xs-2"><a href="https://github.com/Nick-Brennan/ridemap" target="_blank"><img src="assets/rideMap.png" class="screenshot hvr-rotate"></a></div>
+                <div class="col-xs-2"><a href="https://github.com/Nick-Brennan/ridemap" target="_blank"><img src="assets/rideMap.png" class="screenshot hvr-rotate"></a></div></center>
             </div>
             <div class="row">
                 <div class="col-xs-2"><h3 class="projectTitle">DarthRacer</h3><p class="projectText">This two player space racer was built with jQuery and the HTML5 canvas, and features sound effects and plentiful explosions. Racers dodge randomly generated asteroids to be the fisrt to traverse the track</p><br><small><a href="https://github.com/Nick-Brennan/Racing_Game_Project" target="_blank">view the code on GitHub</a></small></div>
@@ -101,18 +101,16 @@
                 <div class="col-xs-2"><h3 class="projectTitle">Vagabond</h3><p class="projectText">Vagabond is a social travel blogging site built using Ruby on Rails. Maps are handled using the Google Maps API, and keywords are extracted from the user's posts through the text analysis feature of IBM's Alchemy API.</p><small>login: guest@guest.com / password: 123</small><br><small><a href="https://github.com/Nick-Brennan/vagabond-team7" target="_blank">view the code on GitHub</a></small></div>
                 <div class="col-xs-2"><h3 class="projectTitle">MoodZiq</h3><p class="projectText">This playlist builder and audio player allows the user to pick a duration and fill that time with the musical genre or mood of their choice. Playlists can be saved and recalled through a clean and intuitive interface. MoodZiq was built using Ruby on Rails and jQuery, and draws its tunes from the SoundCloud API.</p><small>login: guest@guest.com / password: 123</small><br><small><a href="https://github.com/Nick-Brennan/music_app" target="_blank">view the code on GitHub</a></small></div>
                 <div class="col-xs-2"><h3 class="projectTitle">ÖVA</h3><p class="projectText">ÖVA is a run coaching application. An athlete enters their planned weekly training mileage and the days of the week they plan to run, and ÖVA generates a plan based on previous efforts which are gathered through tight integration with Strava. This project was built using an Angular.js front-end and a Rails back-end.</p><small>Click "demo"to checkout ÖVA without a Strava account</small><br><small><a href="https://github.com/Nick-Brennan/Vana" target="_blank">view the code on GitHub</a></small></div>
-                <div class="col-xs-2"><h3 class="projectTitle">RideMap</h3><p class="projectText">How much will that Uber ride cost and what's the route between my destination and starting point?  RideMap provides you with answers.  It was built with Angular, Node/Express, and MongoDB</small><br><small><a href="https://github.com/Nick-Brennan/ridemap" target="_blank">view the code on GitHub</a></small></div>
+                <div class="col-xs-2"><h3 class="projectTitle">RideMap</h3><p class="projectText">How much will that Uber ride cost and what's the route between my destination and starting point?  RideMap provides you with answers.  It was built with Angular, Node/Express, and MongoDB (M.E.A.N)</p><br><small><a href="https://github.com/Nick-Brennan/ridemap" target="_blank">view the code on GitHub</a></small></div>
             </div>
                 
-            <div class="row">
-                <div class="col-lg-3"></div>
-                <div class="col-lg-6 navcaret">
-                    <h3><center><a href="#contact"><i class="fa fa-caret-down fa-3x hvr-wobble-vertical" id="projectCaret" style="margin-top:0px;vertical-align:top;padding-top:0px"></i></a></center></h3>
-                </div> 
-                </div>
-                        </div>
-
-            </div>
+<!--             <div class="row">
+                <div class="col-lg-3"></div> -->
+                    <div class=" navcaret">
+                        <h3><center><a href="#contact"><i class="fa fa-caret-down fa-3x hvr-wobble-vertical" id="projectCaret"></i></a></center></h3>
+                    </div> 
+<!--                 </div>
+            </div> -->
         </div>
         <div id="contact" name="contact">
             <div class="container">
