--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="col-xs-12 col-md-4 col-lg-2"><a href="http://vagabond-ga.herokuapp.com" target="_blank"><img src="assets/vagabond.png" class="screenshot hvr-rotate"></a></div>
                 <div class="col-xs-12 col-md-4 col-lg-2"><a href="http://moodziq-player.herokuapp.com" target="_blank"><img src="assets/moodziq.png" class="screenshot hvr-rotate"></a></div>
                 <div class="col-xs-12 col-md-4 col-lg-2"><a href="http://ovarun.herokuapp.com" target="_blank"><img src="assets/ova.png" class="screenshot hvr-rotate"></a></div>
-                <div class="col-xs-12 col-md-4 col-lg-2"><a href="https://github.com/Nick-Brennan/ridemap" target="_blank"><img src="assets/rideMap.png" class="screenshot hvr-rotate"></a></div></center>
+                <div class="col-xs-12 col-md-4 col-lg-2"><a href="https://ride-map.herokuapp.com" target="_blank"><img src="assets/rideMap.png" class="screenshot hvr-rotate"></a></div></center>
             </div>
             <div class="row">
                 <div class="col-xs-12 col-md-4 col-lg-2"><h3 class="projectTitle">DarthRacer</h3><p class="projectText">This two player space racer was built with jQuery and the HTML5 canvas, and features sound effects and plentiful explosions. Racers dodge randomly generated asteroids to be the fisrt to traverse the track</p><br><small><a href="https://github.com/Nick-Brennan/Racing_Game_Project" target="_blank">view the code on GitHub</a></small></div>
