added project viewing instructions

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <div class="container" id="projects" name="projects">
             <div class="row">
-                <div class="col-lg-12"><h2 id="projectsTitle"><b>Projects</b></h2></div>
+                <div class="col-lg-12"><h2 id="projectsTitle"><b>Projects</b><br><small id="instructions">click an image to visit the app on Heroku</small></h2></div>
             </div>
             <div class="row">
                 <div class="col-xs-12 col-md-4 col-lg-2"><a href="http://darth-racer.herokuapp.com/" target="_blank"><img src="assets/darthRacer.png" class="screenshot hvr-rotate"></a></div>
