--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="row">
                     <div class="col-lg-3"></div>
                     <div class="col-lg-6 navcaret">
-                        <h3><center><a href="#about"><i class="fa fa-caret-down fa-5x hvr-wobble-vertical"></i></a></center></h3>
+                        <h3><center><a href="#about"><i class="fa fa-caret-down fa-5x hvr-wobble-vertical visible-lg"></i></a></center></h3>
                     </div> 
                 </div>
             </div>           
@@ -79,7 +79,7 @@
             <div class="row">
                 <div class="col-lg-3">></div>
                 <div class="col-lg-6 navcaret">
-                    <h3><center><a href="#projects"><i class="fa fa-caret-down fa-3x hvr-wobble-vertical"></i></a></center></h3>
+                    <h3><center><a href="#projects"><i class="fa fa-caret-down fa-3x hvr-wobble-vertical visible-lg"></i></a></center></h3>
                 </div> 
             </div>
         </div>
@@ -88,27 +88,27 @@
                 <div class="col-lg-12"><h2 id="projectsTitle"><b>Projects</b><br><small id="instructions">click an image to visit the app on Heroku</small></h2></div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-sm-4 col-lg-2">
+                <div class="col-xs-12 col-sm-4 col-lg-2 project">
                     <center><a href="http://darth-racer.herokuapp.com/" target="_blank"><img src="assets/darthRacer.png" class="screenshot hvr-rotate"></a></center><br>
                     <h3 class="projectTitle">DarthRacer</h3><p class="projectText">This two player space racer was built with jQuery and the HTML5 canvas, and features sound effects and plentiful explosions. Racers dodge randomly generated asteroids to be the fisrt to traverse the track</p><br><small><a href="https://github.com/Nick-Brennan/Racing_Game_Project" target="_blank">view the code on GitHub</a></small>
                 </div>
-                <div class="col-xs-12 col-sm-4 col-lg-2">
+                <div class="col-xs-12 col-sm-4 col-lg-2 project">
                     <center><a href="http://twitter-lounge.herokuapp.com" target="_blank"><img src="assets/tlounge.png" class="screenshot hvr-rotate"></a></center><br>
                     <h3 class="projectTitle">Twitter-Lounge</h3><p class="projectText">Twitter-Lounge is a real time social Twitter experience. The Socket.io powered chat client is accompanied by a configurable live Twitter stream. This project was built using the Node.js/Express/MongoDB stack, with a lightweight jQuery front-end.</p><small>login: guest@guest.com / password: 123</small><br><small><a href="https://github.com/Nick-Brennan/project1" target="_blank">view the code on GitHub</a></small>
                 </div>
-                <div class="col-xs-12 col-sm-4 col-lg-2">
+                <div class="col-xs-12 col-sm-4 col-lg-2 project">
                     <center><a href="http://vagabond-ga.herokuapp.com" target="_blank"><img src="assets/vagabond.png" class="screenshot hvr-rotate"></a></center><br>
                     <h3 class="projectTitle">Vagabond</h3><p class="projectText">Vagabond is a social travel blogging site built using Ruby on Rails. Maps are handled using the Google Maps API, and keywords are extracted from the user's posts through the text analysis feature of IBM's Alchemy API.</p><small>login: guest@guest.com / password: 123</small><br><small><a href="https://github.com/Nick-Brennan/vagabond-team7" target="_blank">view the code on GitHub</a></small>
                 </div>
-                <div class="col-xs-12 col-sm-4 col-lg-2">
+                <div class="col-xs-12 col-sm-4 col-lg-2 project">
                     <center><a href="http://moodziq-player.herokuapp.com" target="_blank"><img src="assets/moodziq.png" class="screenshot hvr-rotate"></a></center><br>
                     <h3 class="projectTitle">MoodZiq</h3><p class="projectText">This playlist builder and audio player allows the user to pick a duration and fill that time with the musical genre or mood of their choice. Playlists can be saved and recalled through a clean and intuitive interface. MoodZiq was built using Ruby on Rails and jQuery, and draws its tunes from the SoundCloud API.</p><small>login: guest@guest.com / password: 123</small><br><small><a href="https://github.com/Nick-Brennan/music_app" target="_blank">view the code on GitHub</a></small>
                 </div>
-                <div class="col-xs-12 col-sm-4 col-lg-2">
+                <div class="col-xs-12 col-sm-4 col-lg-2 project">
                     <center><a href="http://ovarun.herokuapp.com" target="_blank"><img src="assets/ova.png" class="screenshot hvr-rotate"></a></center><br>
                     <h3 class="projectTitle">ÖVA</h3><p class="projectText">ÖVA is a run coaching application. An athlete enters their planned weekly training mileage and the days of the week they plan to run, and ÖVA generates a plan based on previous efforts which are gathered through tight integration with Strava. This project was built using an Angular.js front-end and a Rails back-end.</p><small>Click "demo"to checkout ÖVA without a Strava account</small><br><small><a href="https://github.com/Nick-Brennan/Vana" target="_blank">view the code on GitHub</a></small>
                 </div>
-                <div class="col-xs-12 col-sm-4 col-lg-2">
+                <div class="col-xs-12 col-sm-4 col-lg-2 project">
                     <center><a href="https://ride-map.herokuapp.com" target="_blank"><img src="assets/rideMap.png" class="screenshot hvr-rotate"></a></center><br>
                     <h3 class="projectTitle">RideMap</h3><p class="projectText">How much will that Uber ride cost and what's the route between my destination and starting point?  RideMap provides you with answers.  It was built with Angular.js, Node.js, Express.js, the Google Maps / Directions API and the Uber API</p><br><small><a href="https://github.com/Nick-Brennan/ridemap" target="_blank">view the code on GitHub</a></small>
                 </div>
@@ -125,7 +125,7 @@
 <!--             <div class="row">
                 <div class="col-lg-3"></div> -->
                     <div class=" navcaret">
-                        <h3><center><a href="#contact"><i class="fa fa-caret-down fa-3x hvr-wobble-vertical" id="projectCaret"></i></a></center></h3>
+                        <h3><center><a href="#contact"><i class="fa fa-caret-down fa-3x hvr-wobble-vertical visible-lg" id="projectCaret"></i></a></center></h3>
                     </div> 
 <!--                 </div>
             </div> -->
