background resize working

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-3"></div>
-                    <div class="col-lg-6 navcaret">
-                        <h3><center><a href="#about"><i class="fa fa-caret-down fa-5x hvr-wobble-vertical visible-lg"></i></a></center></h3>
+                    <div class="col-lg-6 navcaret" style="text-decoration: none;">
+                        <h3><center><a href="#about"><i class="fa fa-caret-down fa-5x hvr-wobble-vertical visible-lg" style="text-decoration: none !important;"></i></a></center></h3>
                     </div> 
                 </div>
             </div>           
