--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-3">></div>
-                <div class="col-lg-6 navcaret">
+                <div class="col-lg-6 navcaret" style="padding-bottom: 50px;">
                     <h3><center><a href="#projects"><i class="fa fa-caret-down fa-3x hvr-wobble-vertical visible-lg"></i></a></center></h3>
                 </div> 
             </div>
@@ -124,7 +124,7 @@
                 
 <!--             <div class="row">
                 <div class="col-lg-3"></div> -->
-                    <div class=" navcaret">
+                    <div class=" navcaret" style="padding-bottom: 30px;">
                         <h3><center><a href="#contact"><i class="fa fa-caret-down fa-3x hvr-wobble-vertical visible-lg" id="projectCaret"></i></a></center></h3>
                     </div> 
 <!--                 </div>
