--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <div class="collapse navbar-collapse" id="collapsingNav">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#about">About</a></li>
-                    <li><a href="#arts">Arts/Community</a></li>
-                    <li><a href="#Strategy">Strategy</a></li>
+                    <li><a href="#arts-community">Arts/Community</a></li>
+                    <li><a href="#strategy">Strategy</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li>
