--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <div class="col-lg-7">
               <h2 class="artsTitles"><b>Board Activities</b></h2>
               <h3 class="artsSubTitles"><b>Youth Musical Theater Company (YMTC)</b></h3>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/v3PwJd7rsck?fmt=35" frameborder="0" allowfullscreen></iframe><br></br>
+              <iframe id="YMTC" width="560" height="315" src="https://www.youtube.com/embed/v3PwJd7rsck" frameborder="0" allowfullscreen></iframe><br></br>
               <h3 class="artsSubTitles"><b>Youth Movement Records</b></h3>
               <iframe width="420" height="315" src="https://www.youtube.com/embed/HC0wr_baC7c" frameborder="0" allowfullscreen></iframe>
             </div>
