--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <script src="js/jquery.scrollTo.min.js"></script>
     <script src="js/jquery.localScroll.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script src="js/main.js"></script>
+
 </head>
 
 <body>
@@ -106,8 +108,9 @@
         <div class="row">
             <div class="col-lg-3">></div>
             <div class="col-lg-6 navcaret" style="padding-bottom: 50px;">
-                <h3><center><a href="#projects"><i class="fa fa-caret-down fa-3x hvr-wobble-vertical visible-lg"></i></a></center></h3><br></br><br></br><br></br><br></br><br></br>
+                <h3><center><a href="#projects"><i class="fa fa-caret-down fa-5x hvr-wobble-vertical visible-lg"></i></a></center></h3><br></br><br></br><br></br><br></br><br></br>
             </div>
+
         </div>
     </div>
 
@@ -155,8 +158,8 @@
                 <br><small><a href="https://github.com/Bkliger/GA-Social" target="_blank">view the code on GitHub</a></small>
             </div>
         </div>
-        <div class="navcaret" style="padding-bottom: 30px;">
-            <h3><center><a href="#strategy"><i class="fa fa-caret-down fa-3x hvr-wobble-vertical visible-lg" id="projectCaret"></i></a></center></h3>
+        <div class="navcaret" style="padding-bottom: 50px;">
+            <h3><center><a href="#strategy"><i class="fa fa-caret-down fa-5x hvr-wobble-vertical visible-lg" id="projectCaret"></i></a></center></h3>
         </div>
     </div>
 
@@ -224,7 +227,7 @@
               </tbody>
             </table>
             <div class="navcaret" style="padding-bottom: 30px;">
-                <h3><center><a href="#arts-community"><i class="fa fa-caret-down fa-3x hvr-wobble-vertical visible-lg" id="projectCaret"></i></a></center></h3>
+                <h3><center><a href="#arts-community"><i class="fa fa-caret-down fa-5x hvr-wobble-vertical visible-lg" id="projectCaret"></i></a></center></h3>
             </div>
           </div>
 
@@ -241,6 +244,7 @@
               <h2 class="artsTitles"><b>Board Activities</b></h2>
               <h3 class="artsSubTitles"><b>Youth Musical Theater Company (YMTC)</b></h3>
               <iframe id="YMTC" width="560" height="315" src="https://www.youtube.com/embed/v3PwJd7rsck" frameborder="0" allowfullscreen></iframe><br></br>
+              <h4 id="warning"> <b>(If the video doesn't play in Safari, change the quality setting)</b></h4>
               <h3 class="artsSubTitles"><b>Youth Movement Records</b></h3>
               <iframe width="420" height="315" src="https://www.youtube.com/embed/HC0wr_baC7c" frameborder="0" allowfullscreen></iframe>
             </div>
@@ -376,7 +380,7 @@
           </div>
         </div>
         <div class="navcaret" style="padding-bottom: 30px;">
-            <h3><center><a href="#contact"><i class="fa fa-caret-down fa-3x hvr-wobble-vertical visible-lg" id="projectCaret"></i></a></center></h3><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
+            <h3><center><a href="#contact"><i class="fa fa-caret-down fa-5x hvr-wobble-vertical visible-lg" id="projectCaret"></i></a></center></h3><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
         </div>
       </div>
     </div>
