--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <br>
                 <h3 class="projectTitle">Chamber Match</h3>
                 <p class="projectText">Chamber Match serves the international chamber music community. Chamber musicians in all countries and post a notice of an event (get together) and other players can sign up to participate, depending on their skill level. The app was built
-                    with Nodejs, Javascript, JQuery and MongoDB</p><smallText>login: bkliger / password: 1234</smallText>
+                    with Nodejs, Javascript, JQuery and MongoDB</p><smallText>login: ed / password: 1234</smallText>
                 <br><small><a href="https://github.com/Bkliger/project-01" target="_blank">view the code on GitHub</a></small>
             </div>
             <div class="col-xs-12 col-sm-6 col-lg-3 project">
